--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 height:100%;
                 z-index: -1;
 
-                background:linear-gradient(180deg, rgba(109, 98, 0, 0.5) 0%, rgba(141, 143, 0, 0) 50%), url("../Images/TileBackground1.png");
+                background:linear-gradient(180deg, rgba(109, 98, 0, 0.5) 0%, rgba(141, 143, 0, 0) 50%), url("Images/TileBackground1.png");
                 background-blend-mode: screen;
                 background-size:25% auto;
                 background-repeat: repeat;
@@ -145,7 +145,7 @@
             <div id="img-div">
                 <figure id="img-icon">
                     <div>
-                        <img id="image" src="../Images/Mario3.png">
+                        <img id="image" src="Images/Mario3.png">
                     </div>
                     <br/>
                     <figcaption id="img-caption">Image of Mario from Nintendo Homepage</figcaption>
