--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!-- font-family and external references -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Titillium+Web:wght@700&family=VT323&display=Amiri&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="indexCSS.css">
+        <link rel="icon" type="image/gif" href="Images/MarioIcon4.png" sizes="16x16">
         
     </head>
     <body id="main">
